--- a/config/locales/pt_BR.yml
+++ b/config/locales/pt_BR.yml
@@ -616,7 +616,7 @@ pt_BR:
         order_no: "Pedido nº"
         order_date: "Concluído em"
         max: "Máximo"
-        product_unit: "Produto: Unidade"
+        product_unit: "Produto: Unidade de Medida"
         weight_volume: "Peso/Volume (g)"
         ask: "Perguntar?"
         page_title: "Gestão de Pedidos em Massa"
