--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1659,6 +1659,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
   shopping_producers_of_hub: "%{hub}'s producers:"
 
   enterprises_next_closing: "Next order closing"
+  enterprises_currently_open: "Orders are currently open"
   enterprises_ready_for: "Ready for"
   enterprises_choose: "Choose when you want your order:"
 
