--- a/config/locales/en_GB.yml
+++ b/config/locales/en_GB.yml
@@ -3446,7 +3446,7 @@ en_GB:
         order_summary_canceled_html: "<strong>Order Summary #%{number} [CANCELED]</strong>"
         details: "Here are the details of what you ordered:"
         unpaid_order: "Your order was unpaid so no refund has been made"
-        paid_order: "Your order was paid so %{distributor} has refunded the full amount"
+        paid_order: "Your order was paid so %{distributor} will refund the full amount. Please don't hesitate to get in touch to notify them that you cancelled your order.  Many business reconcile payments at the end of the month but will happily issue refunds sooner, if they are aware you are waiting."
         credit_order: "Your order was paid so your account has been credited"
         subject: "Cancellation of Order"
       confirm_email:
