--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -143,6 +143,8 @@ en:
     shipping_rate:
       including_tax: "incl."
       excluding_tax: "excl."
+    tax_rate:
+      included_in_price: "Included in price"
 
   validators:
     date_time_string_validator:
