--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3221,6 +3221,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
         payment_state: "Payment State"
     errors:
       messages:
+        included_price_validation: "cannot be selected unless you have set a Default Tax Zone"
         blank: "can't be blank"
     layouts:
       admin:
