--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3206,6 +3206,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
 
     actions:
       update: "Update"
+      cancel: "Cancel"
     shared:
       error_messages:
         errors_prohibited_this_record_from_being_saved:
