--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1987,7 +1987,8 @@ See the %{link} to find out more about %{sitename}'s features and to start using
         locate_address: "Locate address on map"
         confirm_location: "Is this map pin location accurate?"
         confirm_address_yes: "Yes - it's accurate"
-        confirm_address_no: "No - not accurate" 
+        confirm_address_no: "No - not accurate"
+        drag_map_marker: "Due to many producers operating in rural areas, the accuracy of maps is always being improved on. Help us to understand where you’re located better by interacting with the map above to move the pin by clicking or tapping to hold the pin and then dragging to the location that is more accurate based off your knowledge."
       contact:
         title: "Contact"
         who_is_managing_enterprise: "Who is responsible for managing %{enterprise}?"
