--- a/config/locales/pt_BR.yml
+++ b/config/locales/pt_BR.yml
@@ -259,7 +259,7 @@ pt_BR:
   'no': "Não"
   y: 'S'
   n: 'N'
-  powered_by: Distribuído por
+  powered_by: Desenvolvido por
   blocked_cookies_alert: "Seu navegador pode estar bloqueando cookies necessários para usar esta loja virtual. Clique abaixo para permitir cookies e recarregar a página."
   allow_cookies: "Permitir cookies"
   notes: Notas
