--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1572,7 +1572,7 @@ ru:
   shopping_groups_part_of: "часть:"
   shopping_producers_of_hub: "%{hub} производители:"
   enterprises_next_closing: "Закрытие заказа через"
-  enterprises_currently_open: "Заказы в настоящее время открыты"
+  enterprises_currently_open: "Заказы открыты"
   enterprises_ready_for: "Готов к"
   enterprises_choose: "Выберите, когда вы хотите свой заказ:"
   maps_open: "Открыт"
@@ -1977,7 +1977,7 @@ ru:
   outstanding_balance: "Непогашенный остаток"
   admin_enterprise_relationships: "Разрешения Предприятия"
   admin_enterprise_relationships_everything: "Все"
-  admin_enterprise_relationships_permits: "разрешения"
+  admin_enterprise_relationships_permits: "разрешает"
   admin_enterprise_relationships_seach_placeholder: "Поиск"
   admin_enterprise_relationships_button_create: "Создать"
   admin_enterprise_relationships_to: "\"\""
