--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -1572,6 +1572,7 @@ ca:
   shopping_groups_part_of: "forma part de:"
   shopping_producers_of_hub: "Productores de%{hub}:"
   enterprises_next_closing: "La següent comanda tanca"
+  enterprises_currently_open: "Les comandes estan obertes"
   enterprises_ready_for: "Llest per"
   enterprises_choose: "Escull quan vols la teva comanda:"
   maps_open: "Obert"
@@ -2085,6 +2086,7 @@ ca:
   spree_classification_primary_taxon_error: "El taxó %{taxon} és el principal taxó d'%{product} i no es pot eliminar"
   spree_order_availability_error: "La distribuïdora o el cicle de comanda no pot subministrar els productes de la vostra cistella"
   spree_order_populator_error: "Aquesta distribuïdora o cicle de comanda no pot subministrar tots els productes de la vostra cistella. Si us plau trieu-ne d'altres."
+  spree_order_cycle_error: "Seleccioneu un cicle per a aquesta comanda."
   spree_order_populator_availability_error: "Aquest producte no està disponible des de la distribuïdora o cicle de comanda seleccionat."
   spree_distributors_error: "Cal seleccionar almenys un grup"
   spree_user_enterprise_limit_error: "^ %{email} no està autoritzat a tenir més organitzacions (el límit és %{enterprise_limit})."
@@ -3541,6 +3543,7 @@ ca:
         saved_cards_popover: Aquesta és la llista de targetes que heu optat per guardar per a un ús posterior. El vostre "valor predeterminat" es seleccionarà automàticament quan valideu una comanda i es pot carregar per qualsevol botiga a la que li hagueu permès fer-ho (vegeu a la dreta).
       authorised_shops:
         shop_name: "Nom de la botiga"
+        allow_charges?: "Vols permetre els càrrecs a la targeta per defecte?"
     localized_number:
       invalid_format: té un format no vàlid. Si us plau introdueix un número.
     api:
