--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -1190,7 +1190,7 @@ tr:
       cart_sidebar:
         checkout: "Ödeme Yap"
         edit_cart: "Sepeti düzenle"
-        items_in_cart_singular: "Sepetnizide %{num} ürün var"
+        items_in_cart_singular: "Sepetinizde %{num} ürün var"
         items_in_cart_plural: "Sepetinizde %{num} ürün var"
         close: "KAPANIŞ"
         cart_empty: "Sepetiniz boş"
@@ -3538,7 +3538,7 @@ tr:
         delete?: Sil?
       cards:
         authorised_shops: Yetkili Pazarlar
-        authorised_shops_agreement: 'Varsayılan kredi kartınızdan üyeliklerinize istinaden ödeme almakla yetkilendirilmiş dükkanların listesini görebilirsiniz. Kart bilgileriniz gizli tutulacak ve satıcılar ile asla paylaşılmayacaktır. Kartınıza ödeme yansıtıldığında hemen bilgilendirileceksiniz. İlgili dükkanın yanındaki kutucuğu işaretlediğinizde sizden üyelik masraflarına ilişkin ödemelerini kartınıza yansıtması için izin vermiş olursunuz.  '
+        authorised_shops_agreement: 'Varsayılan kredi kartınızdan üyeliklerinize (düzenli siparişleinize) istinaden ödeme almakla yetkilendirilmiş dükkanların listesini görebilirsiniz. Kart bilgileriniz gizli tutulacak ve satıcılar ile asla paylaşılmayacaktır. Kartınıza ödeme yansıtıldığında hemen bilgilendirileceksiniz. İlgili dükkanın yanındaki kutucuğu işaretlediğinizde, üyelik masraflarına ilişkin ödemelerini kartınıza yansıtması için izin vermiş olursunuz.  '
         saved_cards_popover: Bu, daha sonra kullanmak üzere kaydetmeyi seçtiğiniz kartların listesidir. Bir siparişin ödemesi tamamlandığında 'varsayılan'ınız otomatik olarak seçilir ve izin verdiğiniz satıcılar tarafından ücretlendirilebilir (sağa bakın).
       authorised_shops:
         shop_name: "DÜKKAN ADI"
