--- a/config/locales/en_CA.yml
+++ b/config/locales/en_CA.yml
@@ -2016,6 +2016,9 @@ en_CA:
   delivery_method: Delivery Method
   fee_type: "Fee Type"
   tax_category: "Tax Category"
+  description: "Description"
+  display: "Display"
+  tags: "Tags"
   calculator: "Calculator"
   calculator_values: "Calculator values"
   calculator_settings_warning: "If you are changing the calculator type, you must save first before you can edit the calculator settings"
@@ -3036,6 +3039,7 @@ en_CA:
       out_of_stock: '%{item} is out of stock.'
     actions:
       update: "Update"
+      cancel: "Cancel"
     shared:
       error_messages:
         errors_prohibited_this_record_from_being_saved:
@@ -3495,6 +3499,8 @@ en_CA:
       ended: ended
       paused: paused
       canceled: cancelled
+    paypal:
+      refund_amount: "Amount"
     users:
       form:
         account_settings: Account Settings
