--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3044,6 +3044,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
     split: "Split"
     delete: "Delete"
     cannot_set_shipping_method_without_address: "Cannot set shipping method until customer details are provided."
+    no_shipping_method_selected: "No shipping method selected."
     no_tracking_present: "No tracking details provided."
     tracking: "Tracking"
     tracking_number: "Tracking Number"
